--- a/quatroestacoes/static/quatroestacoes/base/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/base/css/style.css
@@ -188,12 +188,15 @@ span {
 .aviso-home {
   display: flex;
   flex-direction: column;
-  margin: 0 1%;
   padding: 0 1%;
   max-width: 30%;
   height: 100%;
   border-right: 1px solid #694C00;
   justify-content: space-around;
+}
+
+.aviso-home:hover {
+  background-color: #a47937;
 }
 
 @media screen and (max-width: 730px) {
