--- a/quatroestacoes/templates/quatroestacoes/avisos/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/lista.html
@@ -13,18 +13,18 @@
         {% if avisos %}
             <ul style="padding: 0;">
                 {% for aviso in avisos %}
-                    <li style="border-bottom: 1px solid #694C00; text-align: left">
-                        <a href="{% url 'quatroestacoes:avisos_info' aviso.id %}">
+                    <a href="{% url 'quatroestacoes:avisos_info' aviso.id %}">
+                        <li class="item-lista">
                             <span>
                                 {{ aviso.data_postagem }}<br><br>
                                 <span style="font-size: 1.2em;">{{ aviso.assunto }}</span>
                             </span><br>
-                        </a>
-                        {{ aviso.corpo|truncatechars:70 }}<br><br>
-                        {% if aviso.data_evento != None %}
-                            Acontecerá em <span>{{ aviso.data_evento }}</span><br><br>
-                        {% endif %}
-                    </li>
+                            {{ aviso.corpo|truncatechars:70 }}<br><br>
+                            {% if aviso.data_evento != None %}
+                                Acontecerá em <span>{{ aviso.data_evento }}</span><br><br>
+                            {% endif %}
+                        </li>
+                    </a>
                     <br>
                 {% endfor %}
             </ul>
