--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="topnav" id="myTopnav">
-        <a class="logo"><img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/></a>
+        <a class="logo" href="{% url 'quatroestacoes:index' %}"><img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/></a>
         <a href="javascript:void(0);" class="icon" onclick="menuResponsivo()">&#9776;</a>
         <a href="{% url 'quatroestacoes:index' %}" class="{% block active_home %}{% endblock active_home %}">HOME</a>
         <a href="{% url 'quatroestacoes:moradores_lista' %}" class="{% block active_moradores %}{% endblock active_moradores %}">MORADORES</a>
