--- a/quatroestacoes/templates/quatroestacoes/reservas/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/reservas/lista.html
@@ -13,10 +13,10 @@
         {% if reservas %}
             <ul style="padding: 0; text-align: left;">
             {% for reserva in reservas %}
-                <li style="border-bottom: 1px solid #694C00;">
+                <li class="item-lista">
                     <span>{{ reserva.data }}</span><br>
-                    {{ reserva.morador.first_name }} {{ reserva.morador.last_name }}<br><br>
-                </li><br>
+                    {{ reserva.morador.first_name }} {{ reserva.morador.last_name }}<br>
+                </li>
             {% endfor %}
             </ul>
         {% else %}
