--- a/quatroestacoes/templates/quatroestacoes/calendario.html
+++ b/quatroestacoes/templates/quatroestacoes/calendario.html
@@ -6,30 +6,29 @@
 {% block active_calendario %}active{% endblock active_calendario %}
 
 {% block conteudo %}
-        <div class="container-calendario">
-            <div class="calendar">
-                <div class="month">
-                    <i class="fa fa-caret-left prev"></i>
-                    <div class="date">
-                        <h1 class='header'></h1>
-                        <h2 class='header'></h2>
-                    </div>
-                    <i class="fa fa-caret-right next"></i>
+    <div class="container-calendario">
+        <div class="calendar">
+            <div class="month">
+                <i class="fa fa-caret-left prev"></i>
+                <div class="date">
+                    <h1 class='header'></h1>
+                    <h2 class='header'></h2>
                 </div>
-                <div class="weekdays">
-                    <div>DOM</div>
-                    <div>SEG</div>
-                    <div>TER</div>
-                    <div>QUA</div>
-                    <div>QUI</div>
-                    <div>SEX</div>
-                    <div>SÁB</div>
-                </div>
-                <div class="days">
-                </div>
+                <i class="fa fa-caret-right next"></i>
+            </div>
+            <div class="weekdays">
+                <div>DOM</div>
+                <div>SEG</div>
+                <div>TER</div>
+                <div>QUA</div>
+                <div>QUI</div>
+                <div>SEX</div>
+                <div>SÁB</div>
+            </div>
+            <div class="days">
             </div>
         </div>
-    {{ reservas|json_script:"reservas" }}
-    {{ moradores|json_script:"moradores" }}
+    </div>
+    {{ eventos|json_script:"eventos" }}
     <script src="{% static 'quatroestacoes/calendario/js/calendario.js' %}"></script>
 {% endblock conteudo %}
