--- a/quatroestacoes/templates/403.html
+++ b/quatroestacoes/templates/403.html
@@ -1,5 +1,7 @@
 {% extends 'quatroestacoes/base.html' %}
 
+{% block titulo %}Acesso negado{% endblock titulo %}
+
 {% block conteudo %}
 <h3>Você não tem permissão para acessar esta página.</h3>
 {% endblock conteudo %}
