--- a/quatroestacoes/static/quatroestacoes/login/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/login/css/style.css
@@ -37,7 +37,10 @@ header h4 {
 .logo-header {
   position: absolute;
   top: 40%;
-  left: 42%;
+  /* left: 50%; */
+  display: flex;
+  justify-content: center;
+  width: 100%;
   transform: translate(-50% -50%);
 }
 
