--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -17,8 +17,23 @@
 </head>
 
 <body>
+    
+    <div class="container-usuario">
+        <a class="sair" href="{% url 'quatroestacoes:logout' %}">SAIR</a>
+        <div class="info-usuario">
+            <p class="info-nome">{{ request.user.first_name|upper }} {{ request.user.last_name|upper }}</p>
+            <p class="info-bloco">BLOCO {{ request.user.bloco }}</p>
+            <p class="info-apartamento">APTO {{ request.user.apartamento }}</p>
+        </div>
+        <div class="icon-usuario">
+            <img src="{% static 'quatroestacoes/base/img/icon-person.svg' %}">
+        </div>
+    </div>
     <div class="topnav" id="myTopnav">
-        <a class="logo" href="{% url 'quatroestacoes:index' %}"><img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/></a>
+        <a class="logo" href="{% url 'quatroestacoes:index' %}">
+            <img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/>
+            <img class="img-logo-sem-texto" src="{% static 'quatroestacoes/base/img/logo-sem-texto.png' %}" />
+        </a>
         <a href="javascript:void(0);" class="icon" onclick="menuResponsivo()">&#9776;</a>
         <a href="{% url 'quatroestacoes:index' %}" class="{% block active_home %}{% endblock active_home %}">HOME</a>
         <a href="{% url 'quatroestacoes:moradores_lista' %}" class="{% block active_moradores %}{% endblock active_moradores %}">MORADORES</a>
@@ -32,18 +47,6 @@
                 <a class="{% block active_salao %}{% endblock active_salao %}" href="{% url 'quatroestacoes:reservas_lista' %}">SALÃO DE FESTAS</a>
                 <a class="{% block active_reclamacoes %}{% endblock active_reclamacoes %}" href="{% url 'quatroestacoes:reclamacoes_lista' %}">RECLAMAÇÕES OU SUGESTÕES</a>
                 <a class="{% block active_reunioes %}{% endblock active_reunioes %}" href="{% url 'quatroestacoes:reunioes_lista' %}">REUNIÕES</a>
-            </div>
-        </div>
-
-        <div class="container-usuario">
-            <a href="{% url 'quatroestacoes:logout' %}">SAIR</a>
-            <div class="info-usuario">
-                <p class="info-nome">{{ request.user.first_name|upper }} {{ request.user.last_name|upper }}</p>
-                <p class="info-bloco">BLOCO {{ request.user.bloco }}</p>
-                <p class="info-apartamento">APTO {{ request.user.apartamento }}</p>
-            </div>
-            <div class="icon-usuario">
-                <img src="{% static 'quatroestacoes/base/img/icon-person.svg' %}">
             </div>
         </div>
         
