--- a/quatroestacoes/static/quatroestacoes/base/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/base/css/style.css
@@ -1,488 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
-
-html {
-  height: 100%;
-}
-
 body {
-  margin: 0;
-  font-family: "Open Sans", sans-serif;
-  height: 100%;
-  background: linear-gradient(rgba(219, 204, 167, 1), rgba(255, 255, 255, 0.5)),
-    url("../img/fundo.png");
+  background: linear-gradient(rgba(219, 204, 167, 1), rgba(255, 255, 255, 0.5));
   background-size: cover;
   background-repeat: no-repeat;
-  overflow-x: hidden;
-  overflow-y: auto;
-  margin: 0;
-  padding: 0;
   background-attachment: fixed;
+  padding: 1vh;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+.navbar {
+  background-color: #ffe495;
 }
 
-input[type="number"] {
-  -moz-appearance: textfield;
+.logo-navbar {
+  width: 6vh;
 }
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-img {
-  pointer-events: none;
-}
-
-textarea {
-  resize: none;
-}
-
-.img-logo{
-  height: 60px;
-  object-fit: scale-down;
-  position: relative;
-  top: 10px
-}
-
-.img-logo-sem-texto {
-  height: 60px;
-  object-fit: scale-down;
-  display: none;
-  position: relative;
-  top: 10px;
-}
-
-.topnav {
-  overflow: hidden;
-  margin: 0 2em;
-  padding: 1em 0.2em 0.5em;
-  border-bottom: 0.15em solid #694c00;
-}
-
-.topnav a, .sair {
-  float: left;
-  display: inline;
-  color: #000000;
-  letter-spacing: 0.2em;
-  line-height: 5em;
-  font-weight: bold;
-  text-align: center;
-  margin: 0 1em;
-  padding: 0.3em 0.5em 0.05em;
-  text-decoration: none;
-  font-size: 14px;
-  transition: 0.2s;
-}
-
-.active {
-  border-bottom: 0.2em solid #694c00;
-  border-spacing: 0.5em;
-}
-
-#active {
-  border-bottom: 0.2em solid #694c00;
-  border-spacing: 0.5em;
-}
-
-.topnav .active {
-  color: #694c00;
-}
-
-.topnav .icon {
-  display: none;
-  margin: 0 0 15px;
-}
-
-.dropdown {
-  font-weight: bold;
-  float: left;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 14px;
-  border: none;
-  outline: none;
-  color: #000000;
-  letter-spacing: 0.2em;
-  line-height: 5em;
-  font-weight: inherit;
-  margin: 0 1em;
-  padding: 0.3em 0.5em;
-  background-color: inherit;
-  font-family: inherit;
-  transition: 0.2s;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  margin: 0;
-  padding: 0.3em 0.5em 0.05em;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:not(.logo):hover, .sair:hover,
-.dropdown:hover .dropbtn {
-  text-shadow: 2px 2px 2px #0000006b;
-  color: white;
-  background: linear-gradient(0deg, rgba(186, 152, 64, 0.8) 0%, rgba(186, 152, 64, 0.586) 30%, rgba(0,212,255,0) 100%);
-  transition: .5s;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.container {
-  height: 70%;
-  padding: 20px;
-  margin: 20px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-
-h3 {
-  letter-spacing: 0.2em;
-}
-
-span {
-  font-weight: bold;
-}
-
-.info-salao,
-.info-comunicados {
-  height: 85%;
-  overflow-y: auto;
-}
-
-.container-avisos-home {
-  display: flex;
-  justify-content: center;
-  padding: 2em;
-  text-align: left;
-  height: 60%;
-}
-
-.container-salao-home {
-  padding: 2em;
-  text-align: left;
-  height: fit-content;
-  margin: 0;
-}
-
-.aviso-home {
-  display: flex;
-  flex-direction: column;
-  padding: 0 1%;
-  max-width: 30%;
-  height: 100%;
-  border-right: 1px solid #694c00;
-  justify-content: space-around;
-  transition: 0.2s;
-}
-
-#aviso-home-1 {
-  border-left: 1px solid #694C00;
-}
-
-.item-lista {
-  border-bottom: 1px solid #694c00;
-  text-align: left;
-  padding: 1em;
-  transition: 0.2s;
-}
-
-.aviso-home:hover,
-.item-lista:hover {
-  background-color: #a47937;
-}
-
-
-.container-home {
-  display: flex;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-}
-
-.info-comunicados,
-.info-salao {
-  margin: 0 30px;
-}
-
-.info-comunicados,
-.info-salao {
-  background-color: rgba(186, 151, 64, 0.5);
-}
-
-.info-comunicados {
-  width: 70%;
-}
-
-.info-salao {
-  width: 30%;
-}
-
-.container-usuario {
-  /* display: flex;
-  justify-content: end; */
-  position: absolute;
-    float: right;
-    top: 20px;
-    right: 40px;
-    display: flex;
-}
-
-.container-usuario p {
-  font-size: 0.75em;
-  line-height: 1em;
-  margin: 1em 1.25em 0 2.5em;
-}
-
-.info-nome {
-  font-weight: bold;
-}
-
-.icon-usuario {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.container-info-usuario {
-  background-color: rgba(186, 151, 64, 0.35);
-  padding: 1em;
-  margin: 0 0 2em;
-}
-
-.container-info-usuario p,
-.container-form-morador p {
-  text-align: left;
-}
-
-.container-cadastrar-morador,
-.container-alterar-morador {
-  margin: 30px 0 0 0;
-}
-
-.container-form {
-  height: fit-content;
-  max-height: 70%;
-  width: 100%;
-  max-width: 600px;
-  background-color: rgba(186, 151, 64, 0.35);
-  padding: 1em;
-  margin: 1em;
-  overflow: auto;
-}
-
-.container-form p {
-  text-align: left;
-}
-
-.container-lista {
-  max-width: 600px;
-  background-color: rgba(186, 151, 64, 0.35);
-  padding: 1em;
-  margin: 1em;
-  overflow-y: auto;
-  max-height: 70%;
-}
-
-.btn-acao,
-.btn-deletar {
-  padding: 0.8em;
-  border: none;
-  font-size: 17px;
-  font-weight: bold;
-  color: white;
-}
-
-.btn-acao {
-  background-color: rgba(142, 81, 40, 0.6);
-}
-
-.btn-deletar {
-  background-color: rgba(220, 0, 0, 0.6);
-}
-
-.btn-acao:hover {
-  cursor: pointer;
-}
-
-.container-avisos,
-.container-reclamacoes,
-.container-reservas {
-  display: flex;
-  flex-direction: column;
-}
-
-
-@media screen and (max-width: 600px) {
-  .container-home {
-    display: block;
-  }
-
-  .info-comunicados {
-    width: 100%;
-    border-right: none;
-    padding: 2em 0em;
-    margin: 2em 0;
-  }
-
-  .info-salao {
-    width: 100%;
-    padding: 2em 0em;
-    margin: 2em 0;
-  }
-
-  .info-usuario {
-    margin: 0 0 0 1.25em;
-  }
-
-  .img-logo {
-    /* margin-top: 1em; */
-    display: none;
-  }
-
-  .img-logo-sem-texto {
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 730px) {
-  /* .img-logo {
-    height: 45px;
-    object-fit: scale-down;
-  } */
-
-  .aviso-home {
-    display: block;
-    max-width: max-content;
-    margin-bottom: 15%;
-    border: 0;
-    border-bottom: 1px solid #694C00;
-    width: 100%;
-  }
-  
-
-  #aviso-home-1 {
-    border-bottom: 1px solid #694C00;
-    border-left: 0;
-  }
-
-  .container-avisos-home {
-    display: block;
-  }
-
-  body {
-    overflow: auto;
-  }
-
-}
-
-
-@media screen and (max-width: 1140px) {
-  .container-usuario {
-    right: 70px;
-  }
-  .topnav a:not(:first-child),
-  .dropdown .dropbtn {
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-
-  .topnav.responsive {
-    position: relative;
-  }
-
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .topnav.responsive .dropdown {
-    float: none;
-  }
-
-  .topnav.responsive .dropdown-content {
-    position: relative;
-  }
-
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-
-  /* .img-logo {
-    height: 45px;
-    object-fit: cover;
-  } */
-
-  .container-usuario p {
-    font-size: 0.75em;
-    line-height: 1em;
-    margin: 1em 1.25em 0 0;
-  }
-}
-/* 
-@media screen and (max-width: 1340px) {
-
-  .aviso-home {
-    display: block;
-    max-width: max-content;
-    margin-bottom: 15%;
-    border: 0;
-    border-bottom: 1px solid #694C00;
-    width: 100%;
-  }
-  
-
-  #aviso-home-1 {
-    border-bottom: 1px solid #694C00;
-    border-left: 0;
-  }
-
-  .container-avisos-home {
-    display: block;
-  }
-  
-} */
