--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -1,62 +1,39 @@
-{% load static %}
-
 <!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block titulo %}{% endblock titulo %}</title>
-    <link rel="stylesheet" href="{% static 'quatroestacoes/base/css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'quatroestacoes/calendario/css/calendario.css' %}">
-    <link rel="stylesheet" href="{% static 'quatroestacoes/moradores/moradores.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
-    <script src="{% static 'quatroestacoes/base/js/functions.js' %}"></script>
-</head>
-
-<body>
-    
-    <div class="container-usuario">
-        <a class="sair" href="{% url 'quatroestacoes:logout' %}">SAIR</a>
-        <div class="info-usuario">
-            <p class="info-nome">{{ request.user.first_name|upper }} {{ request.user.last_name|upper }}</p>
-            <p class="info-bloco">BLOCO {{ request.user.bloco }}</p>
-            <p class="info-apartamento">APTO {{ request.user.apartamento }}</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Quatro Estações</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../static/quatroestacoes/base/css/style.css">
+  </head>
+  <body>
+    <nav class="navbar .navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="logo-navbar" src="../../static/quatroestacoes/base/img/logo-sem-texto.png" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarLinks">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Moradores</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Calendário</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Outros</a>
+            </li>
+            <li class="nav-item"></li>
+          </ul>
         </div>
-        <div class="icon-usuario">
-            <img src="{% static 'quatroestacoes/base/img/icon-person.svg' %}">
-        </div>
-    </div>
-    <div class="topnav" id="myTopnav">
-        <a class="logo" href="{% url 'quatroestacoes:index' %}">
-            <img class="img-logo" src="{% static 'quatroestacoes/base/img/logo.png' %}"/>
-            <img class="img-logo-sem-texto" src="{% static 'quatroestacoes/base/img/logo-sem-texto.png' %}" />
-        </a>
-        <a href="javascript:void(0);" class="icon" onclick="menuResponsivo()">&#9776;</a>
-        <a href="{% url 'quatroestacoes:index' %}" class="{% block active_home %}{% endblock active_home %}">HOME</a>
-        <a href="{% url 'quatroestacoes:moradores_lista' %}" class="{% block active_moradores %}{% endblock active_moradores %}">MORADORES</a>
-        <a href="{% url 'quatroestacoes:calendario' %}" class="{% block active_calendario %}{% endblock active_calendario %}">CALENDÁRIO</a>
-        <div class="dropdown">
-            <button class="dropbtn">OUTROS
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a class="{% block active_avisos %}{% endblock active_avisos %}" href="{% url 'quatroestacoes:avisos_lista' %}">AVISOS</a>
-                <a class="{% block active_salao %}{% endblock active_salao %}" href="{% url 'quatroestacoes:reservas_lista' %}">SALÃO DE FESTAS</a>
-                <a class="{% block active_reclamacoes %}{% endblock active_reclamacoes %}" href="{% url 'quatroestacoes:reclamacoes_lista' %}">RECLAMAÇÕES OU SUGESTÕES</a>
-                <a class="{% block active_reunioes %}{% endblock active_reunioes %}" href="{% url 'quatroestacoes:reunioes_lista' %}">REUNIÕES</a>
-            </div>
-        </div>
-        
-    </div>
-
-    <div class="container"> 
-        {% block conteudo %}
-        {% endblock conteudo %}
-    </div>
-
-</body>
-
+      </div>
+    </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
