Adicionar dropdown para 'Outros'

--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -26,10 +26,19 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Calendário</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Outros</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Outros</a>
+              <ul class="dropdown-menu">
+                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Avisos</a></li>
+                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Salão de festas</a></li>
+                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Reclamações e sugestões</a></li>
+                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Reuniões</a></li>
+              </ul>
             </li>
-            <li class="nav-item"></li>
+            <hr>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Sair</a>
+            </li>
           </ul>
         </div>
       </div>
