--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../static/quatroestacoes/base/css/style.css">
   </head>
   <body>
-    <nav class="navbar .navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img class="logo-navbar" src="../../static/quatroestacoes/base/img/logo-sem-texto.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks">
