--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -1,12 +1,15 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quatro Estações</title>
+    <title>{% block titulo %}{% endblock titulo %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../static/quatroestacoes/base/css/style.css">
+    <link rel="stylesheet" href="{% static 'quatroestacoes/base/css/style.css' %}">
+    <link rel="icon" href="{% static 'quatroestacoes/base/img/favicon.png' %}">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -18,21 +21,21 @@
         <div class="collapse navbar-collapse" id="navbarLinks">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
+              <a href="{% url 'quatroestacoes:index' %}" class="nav-link {% block active_home %}{% endblock active_home %}">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Moradores</a>
+              <a href="{% url 'quatroestacoes:moradores_lista' %}" class="nav-link {% block active_moradores %}{% endblock active_moradores %}">MORADORES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Calendário</a>
+              <a href="{% url 'quatroestacoes:calendario' %}" class="nav-link {% block active_calendario %}{% endblock active_calendario %}">CALENDÁRIO</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Outros</a>
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">OUTROS</a>
               <ul class="dropdown-menu">
-                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Avisos</a></li>
-                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Salão de festas</a></li>
-                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Reclamações e sugestões</a></li>
-                <li><a href="#" class="dropdown-item nav-link m-1 ms-4">Reuniões</a></li>
+                <li><a href="{% url 'quatroestacoes:avisos_lista' %}" class="dropdown-item nav-link m-1 ms-4 {% block active_avisos %}{% endblock active_avisos %}">AVISOS</a></li>
+                <li><a href="{% url 'quatroestacoes:reservas_lista' %}" class="dropdown-item nav-link m-1 ms-4 {% block active_salao %}{% endblock active_salao %}">SALÃO DE FESTAS</a></li>
+                <li><a href="{% url 'quatroestacoes:reclamacoes_lista' %}" class="dropdown-item nav-link m-1 ms-4 {% block active_reclamacoes %}{% endblock active_reclamacoes %}">RECLAMAÇÕES E SUGESTÕES</a></li>
+                <li><a href="{% url 'quatroestacoes:reunioes_lista' %}" class="dropdown-item nav-link m-1 ms-4 {% block active_reunioes %}{% endblock active_reunioes %}">REUNIÕES</a></li>
               </ul>
             </li>
             <hr>
