Adicionar padding ao bloco de conteúdo

--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -46,7 +46,9 @@
         </div>
       </div>
     </nav>
-    {% block conteudo %}{% endblock conteudo %}
+    <div style="padding: 1vh 0;">
+      {% block conteudo %}{% endblock conteudo %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
