Adicionar Quadro de Avisos na home

--- a/quatroestacoes/static/quatroestacoes/base/css/style.css
+++ b/quatroestacoes/static/quatroestacoes/base/css/style.css
@@ -17,3 +17,11 @@ body {
 .dropdown-menu {
   background-color: #fff1c9;
 }
+
+.card-aviso {
+  background-color: #fff2cb;
+}
+
+.card-header {
+  background-color: #ffe7a2;
+}
