--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -14,7 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="logo-navbar" src="../../static/quatroestacoes/base/img/logo-sem-texto.png" alt=""></a>
+        <a class="navbar-brand" href="{% url 'quatroestacoes:index' %}"><img class="logo-navbar" src="../../static/quatroestacoes/base/img/logo-sem-texto.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarLinks">
           <span class="navbar-toggler-icon"></span>
         </button>
