Implementar logout no botão SAIR

--- a/quatroestacoes/templates/quatroestacoes/base.html
+++ b/quatroestacoes/templates/quatroestacoes/base.html
@@ -40,7 +40,7 @@
             </li>
             <hr>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sair</a>
+              <a class="nav-link" href="{% url 'quatroestacoes:logout' %}">SAIR</a>
             </li>
           </ul>
         </div>
