--- a/quatroestacoes/templates/quatroestacoes/avisos/info.html
+++ b/quatroestacoes/templates/quatroestacoes/avisos/info.html
@@ -1,5 +1,8 @@
-{% extends 'quatroestacoes/base.html' %} {% block titulo %}Aviso{% endblock titulo %} {% block conteudo %}
+{% extends 'quatroestacoes/base.html' %} 
 
+{% block titulo %}Aviso{% endblock titulo %} 
+
+{% block conteudo %}
 <div class="card">
   <div class="card-body card-aviso">
     <h3 class="card-title">{{ aviso.assunto }}</h3>
