--- a/quatroestacoes/templates/quatroestacoes/moradores/lista.html
+++ b/quatroestacoes/templates/quatroestacoes/moradores/lista.html
@@ -4,62 +4,78 @@
 {% block titulo %}Moradores{% endblock titulo %}
 
 {% block conteudo %}
-<div class="container-lista-morador">
-    <div class="container-adicionar-morador">
-        {% if request.user.is_staff %}
-            <a href="{% url 'quatroestacoes:moradores_add' %}" class="btn-acao">Adicionar morador</a> 
-            <br><br><br>
+<nav>
+  <div class="nav nav-pills nav-fill mb-3 mt-3" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-bloco-a-tab" data-bs-toggle="tab" data-bs-target="#nav-bloco-a" type="button" role="tab">A</button>
+    <button class="nav-link" id="nav-bloco-b-tab" data-bs-toggle="tab" data-bs-target="#nav-bloco-b" type="button" role="tab">B</button>
+    <button class="nav-link" id="nav-bloco-c-tab" data-bs-toggle="tab" data-bs-target="#nav-bloco-c" type="button" role="tab">C</button>
+    <button class="nav-link" id="nav-bloco-d-tab" data-bs-toggle="tab" data-bs-target="#nav-bloco-d" type="button" role="tab">D</button>
+  </div>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-bloco-a" role="tabpanel" tabindex="0">
+    {% for morador in moradores %}
+      {% if not morador.is_staff %}
+        {% if morador.bloco == "A" %}
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item card-morador-a">
+                <h5 class="card-title mb-0 p-1">{{ morador.first_name }} {{ morador.last_name }}</h5>
+                <a class="stretched-link" href="{% url 'quatroestacoes:moradores_info' morador.id %}"></a>
+              </li>
+            </ul>
+          </div>
         {% endif %}
-    </div>
-    <div class="container-moradores">
-        {% if moradores %}
-            <div class="container-bloco-a container-bloco">
-                <h3>BLOCO A</h3>
-                {% for morador in moradores %}
-                    {% if not morador.is_staff %}
-                        {% if morador.bloco == "A" %}
-                            <p><a href="{% url 'quatroestacoes:moradores_info' morador.id %}">{{ morador.first_name }} {{ morador.last_name }}</a></p>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-            </div>
-
-            <div class="container-bloco-b container-bloco">
-            <h3>BLOCO B</h3>
-            {% for morador in moradores %}
-                {% if not morador.is_staff %}
-                    {% if morador.bloco == "B" %}
-                        <p><a href="{% url 'quatroestacoes:moradores_info' morador.id %}">{{ morador.first_name }} {{ morador.last_name }}</a></p>
-                    {% endif %}
-                {% endif %}
-            {% endfor %}
-            </div>
-            
-            <div class="container-bloco-c container-bloco">
-            <h3>BLOCO C</h3>
-            {% for morador in moradores %}
-                {% if not morador.is_staff %}
-                    {% if morador.bloco == "C" %}
-                        <p><a href="{% url 'quatroestacoes:moradores_info' morador.id %}">{{ morador.first_name }} {{ morador.last_name }}</a></p>
-                    {% endif %}
-                {% endif %}
-            {% endfor %}
-            </div>
-            
-            <div class="container-bloco-d container-bloco">
-            <h3>BLOCO D</h3>
-            {% for morador in moradores %}
-                {% if not morador.is_staff %}
-                    {% if morador.bloco == "D" %}
-                        <p><a href="{% url 'quatroestacoes:moradores_info' morador.id %}">{{ morador.first_name }} {{ morador.last_name }}</a></p>
-                    {% endif %}
-                {% endif %}
-            {% endfor %}
-            </div>
-        {% else %}
-        <p>nenhum morador disponível</p>
+      {% endif %}
+    {% endfor %}
+  </div>
+  <div class="tab-pane fade" id="nav-bloco-b" role="tabpanel" tabindex="0">
+    {% for morador in moradores %}
+      {% if not morador.is_staff %}
+        {% if morador.bloco == "B" %}
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item card-morador-b">
+                <h5 class="card-title mb-0 p-1">{{ morador.first_name }} {{ morador.last_name }}</h5>
+                <a class="stretched-link" href="{% url 'quatroestacoes:moradores_info' morador.id %}"></a>
+              </li>
+            </ul>
+          </div>
         {% endif %}
-    </div>
+      {% endif %}
+    {% endfor %}
+  </div>
+  <div class="tab-pane fade" id="nav-bloco-c" role="tabpanel" tabindex="0">
+    {% for morador in moradores %}
+      {% if not morador.is_staff %}
+        {% if morador.bloco == "C" %}
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item card-morador-c">
+                <h5 class="card-title mb-0">{{ morador.first_name }} {{ morador.last_name }}</h5>
+                <a class="stretched-link" href="{% url 'quatroestacoes:moradores_info' morador.id %}"></a>
+              </li>
+            </ul>
+          </div>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  </div>
+  <div class="tab-pane fade" id="nav-bloco-d" role="tabpanel" tabindex="0">
+    {% for morador in moradores %}
+      {% if not morador.is_staff %}
+        {% if morador.bloco == "D" %}
+          <div class="card">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item card-morador-d">
+                <h5 class="card-title mb-0 p-1">{{ morador.first_name }} {{ morador.last_name }}</h5>
+                <a class="stretched-link" href="{% url 'quatroestacoes:moradores_info' morador.id %}"></a>
+              </li>
+            </ul>
+          </div>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+  </div>
 </div>
-
 {% endblock %}
